improved upload ui; added icons to buttons; fixed z-index problem on upload cards; uploads are multi-selectable; multi-selected cards hide / show multi-actions; multi-move and multi-delete form actions stubbed out

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,52 @@
 
 .uploadActions {
   background-color: rgba(255, 255, 255, 0.7);
+  z-index: 1;
+}
+
+.uploadActions form {
+  display: inline;
+}
+
+#uploadMultiActions .input-group,
+#uploadMultiActions select ,
+#uploadMultiActions .button {
+  margin-bottom: 0;
+}
+
+.uploadCheck {
+  cursor: pointer;
+  float: right;
+}
+
+.uploadForm {
+  background: rgba(255, 255, 255, 0.95);
+  border-right: 1px solid #cacaca;
+  border-top: 1px solid #cacaca;
+  box-shadow: 3px 3px 16px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  padding: 1rem;
+  width: auto;
+}
+
+#fileSelectorLabelWrapper {
+  margin: 0;
+}
+
+label#fileSelectorLabel {
+  border-bottom: 2px solid #1779ba;
+  cursor: pointer;
+  display: inline;
+  font-size: 1rem;
+}
+
+#fileUploadButton {
+  margin: -3px 0 -3px 0.85rem;
+}
+
+#fileNamePreview {
+  position: relative;
+  top: 2px;
 }
